--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<script type="text/javascript">
 							var submitted=false;
 						</script>
-						<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='../byggmont/tack.html';}"></iframe>
+						<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='../tack.html';}"></iframe>
 						<form id="contact" action="https://docs.google.com/forms/d/e/1FAIpQLSdyam1iLwUpIWg0LJHy6mD38iUhi2smo32jcxjcHPo2-mw2sA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
 							<input placeholder="Namn" name="entry.2052990183" type="text" required/>
 							<input placeholder="Telefonnummer" name="entry.1688590420" type="text" required/>
