Redirect fix final

--- a/tack.html
+++ b/tack.html
@@ -27,7 +27,7 @@
 			<div class="w-100 text-white">
 				<h1 class="display-6">Tack för ditt meddelande!</h1>
 				<p class="lead mb-0">Vi svarar så fort vi kan.</p><br>
-				<a style="text-decoration: none;color: white;" href="nojdh.github.io/index.html"><p class="lead mb-0"><- Tillbaka</p></a>
+				<a style="text-decoration: none;color: white;" href="../index.html"><p class="lead mb-0"><- Tillbaka</p></a>
 			</div>
 		</div>
 	</div>
