Små ändringar, css för telefon

--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
 						</script>
 						<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='../tack.html';}"></iframe>
 						<form id="contact" action="https://docs.google.com/forms/d/e/1FAIpQLSdyam1iLwUpIWg0LJHy6mD38iUhi2smo32jcxjcHPo2-mw2sA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
-							<input placeholder="Namn" name="entry.2052990183" type="text" required/>
-							<input placeholder="Telefonnummer" name="entry.1688590420" type="text" required/>
-							<input placeholder="E-postadress" name="entry.116736670" type="email" required/>
-					
+							<input id="namn" placeholder="Namn" name="entry.2052990183" type="text" required/>
+							<input id="amne" placeholder="Ämne" name="entry.70107939" type="text" required/>
+							<input id="telefonnummer" placeholder="Telefonnummer" name="entry.1688590420" type="text" required/>
+							<input id="epost" placeholder="E-postadress" name="entry.116736670" type="email" required/>
 							<textarea placeholder="Ditt meddelande" name="entry.2131010113" id="" cols="30" rows="10"></textarea>
-							<hr>
+						
 							<input id="contact-submit" type="submit" value="Skicka meddelande" />
 						</form>
 					</div>
