--- a/index.html
+++ b/index.html
@@ -51,6 +51,37 @@
 				</div>
 			</div>
 		</div>
+		<script>
+				var div = document.createElement('div');
+				div.className = 'fb-customerchat';
+				div.setAttribute('page_id', '102912337851969');
+				div.setAttribute('ref', 'b64:bGl2ZS1jaGF0');
+				document.body.appendChild(div);
+				window.fbMessengerPlugins = window.fbMessengerPlugins || {
+				  init: function () {
+					FB.init({
+					  appId            : '1678638095724206',
+					  autoLogAppEvents : true,
+					  xfbml            : true,
+					  version          : 'v3.3'
+					});
+				  }, callable: []
+				};
+				window.fbAsyncInit = window.fbAsyncInit || function () {
+				  window.fbMessengerPlugins.callable.forEach(function (item) { item(); });
+				  window.fbMessengerPlugins.init();
+				};
+				setTimeout(function () {
+				  (function (d, s, id) {
+					var js, fjs = d.getElementsByTagName(s)[0];
+					if (d.getElementById(id)) { return; }
+					js = d.createElement(s);
+					js.id = id;
+					js.src = "//connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+					fjs.parentNode.insertBefore(js, fjs);
+				  }(document, 'script', 'facebook-jssdk'));
+				}, 0);
+			  </script>
 	</header>
 	<section id="tjanster" class="bg-dark">
 		<div class="container text-white">
@@ -73,6 +104,9 @@
 		</div>
 		</div>
 	</section>
+	<div class="fb-customerchat"
+ page_id="<PAGE_ID>">
+</div>
 	<section id="omoss" class="bg-light">
 		<div class="container text-white">
 			<div class="row">
@@ -174,6 +208,7 @@
 	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 	<script src="js/scrolling-nav.js"></script>
+	
 </body>
 
 </html>
