--- a/index.html
+++ b/index.html
@@ -51,20 +51,32 @@
 				</div>
 			</div>
 		</div>
-		<div id=“fb-root”></div>
-		<script>
-		(function(d, s, id) {
-		var js, fjs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id)) return;
-		js = d.createElement(s); js.id = id;
-		js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
-		fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-		</script>
-		<div class="fb-customerchat"
-		page_id="102912337851969">
-	   </div>
 	</header>
+
+	<script>
+			window.fbAsyncInit = function() {
+			  FB.init({
+				appId            : '938134089903291',
+				autoLogAppEvents : true,
+				xfbml            : true,
+				version          : 'v2.11'
+			  });
+			};
+		  (function(d, s, id){
+			   var js, fjs = d.getElementsByTagName(s)[0];
+			   if (d.getElementById(id)) {return;}
+			   js = d.createElement(s); js.id = id;
+			   js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+			   fjs.parentNode.insertBefore(js, fjs);
+			 }(document, 'script', 'facebook-jssdk'));
+		  </script>
+		  
+		  <!-- Your customer chat code -->
+		  <div class="fb-customerchat"
+			attribution=setup_tool
+			page_id="102912337851969"
+			theme_color="#BE59B9">
+		  </div>
 	<section id="tjanster" class="bg-dark">
 		<div class="container text-white">
 			<div class="row">
