--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@
 </head>
 
 <body id="page-top">
+
+
+		<script>
+				window.fbAsyncInit = function() {
+				  FB.init({
+					appId            : '938134089903291',
+					autoLogAppEvents : true,
+					xfbml            : true,
+					version          : 'v5.0'
+				  });
+				};
+								(function(d, s, id) {
+				var js, fjs = d.getElementsByTagName(s)[0];
+				if (d.getElementById(id)) return;
+				js = d.createElement(s); js.id = id;
+				js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+				fjs.parentNode.insertBefore(js, fjs);
+				}(document, 'script', 'facebook-jssdk'));
+			  </script>
+			  <script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>		
+			  
+			  <div class="fb-customerchat"
+ page_id="102912337851969">
+</div>
+
 	<script>
 		document.body.className += ' fade-out';
 	</script>
