--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
 			  </script>
 			  <script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>		
 			  
-			  <div class="fb-customerchat"
- page_id="102912337851969">
-</div>
+				<div class="fb-customerchat"
+					page_id="102912337851969"
+					theme_color="#2e3291"
+					logged_in_greeting="Hej! Om du vill kontakta oss via Facebook Messenger är det bara att skriva här!"
+					logged_out_greeting="Hej! Om du vill kontakta oss via Facebook Messenger är det bara att skriva här!">
+					>					
+				</div>
 
 	<script>
 		document.body.className += ' fade-out';
