--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 				<div class="fb-customerchat"
 					page_id="102912337851969"
 					theme_color="#2e3291"
-					logged_in_greeting="Hej! Om du vill kontakta oss via Facebook Messenger är det bara att skriva här!"
-					logged_out_greeting="Hej! Om du vill kontakta oss via Facebook Messenger är det bara att skriva här!">
+					logged_in_greeting="Hej!"
+					logged_out_greeting="Hej!">
 					>					
 				</div>
 
