--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 			  
 				<div class="fb-customerchat"
 					page_id="102912337851969"
-					theme_color="#2e3291"
-					logged_in_greeting="Hej!"
-					logged_out_greeting="Hej!">
-					>					
+					theme_color="#118f69"
+					greeting_dialog_delay="5"
+					logged_in_greeting="Skriv gärna till oss via Facebook här!"
+					logged_out_greeting="Skriv gärna till oss via Facebook här!">
+					>			
 				</div>
 
 	<script>
