--- a/index.html
+++ b/index.html
@@ -18,33 +18,32 @@
 <body id="page-top">
 
 
-		<script>
-				window.fbAsyncInit = function() {
-				  FB.init({
-					appId            : '938134089903291',
-					autoLogAppEvents : true,
-					xfbml            : true,
-					version          : 'v5.0'
-				  });
-				};
-								(function(d, s, id) {
-				var js, fjs = d.getElementsByTagName(s)[0];
-				if (d.getElementById(id)) return;
-				js = d.createElement(s); js.id = id;
-				js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1";
-				fjs.parentNode.insertBefore(js, fjs);
-				}(document, 'script', 'facebook-jssdk'));
-			  </script>
-			  <script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>		
-			  
-				<div class="fb-customerchat"
-					page_id="102912337851969"
-					theme_color="#118f69"
-					greeting_dialog_delay="5"
-					logged_in_greeting="Skriv gärna till oss via Facebook här!"
-					logged_out_greeting="Skriv gärna till oss via Facebook här!">
-					>			
-				</div>
+	<!-- Load Facebook SDK for JavaScript -->
+	<div id="fb-root"></div>
+	<script>
+	  window.fbAsyncInit = function() {
+		FB.init({
+		  xfbml            : true,
+		  version          : 'v5.0'
+		});
+	  };
+
+	  (function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = 'https://connect.facebook.net/sv_SE/sdk/xfbml.customerchat.js';
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+
+	<!-- Your customer chat code -->
+	<div class="fb-customerchat"
+	  attribution=setup_tool
+	  page_id="102912337851969"
+theme_color="#118f69"
+logged_in_greeting="Hej! Hur kan vi hjälpa dig idag?"
+logged_out_greeting="Hej! Hur kan vi hjälpa dig idag?">
+	</div>
 
 	<script>
 		document.body.className += ' fade-out';
