--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2>Kontakta oss</h2>
-                    <div class="container">
-                        <p class="lead">Skriv via Facebook-chatten eller använd formuläret nedan.</p>
+                    <div class="container kontaktar">
+                        <p class="lead">Skriv via <a href="https://m.me/102912337851969?fbclid=IwAR0Q0Oqo8PgiqZgq7oyxebpXPEFKyr8Oz-8EdducH85nTK9r0YiCer9BrRc">Facebook-chatten</a> eller använd formuläret nedan.</p>
 						<p class="bread">Vid brådskande frågor ring +46 768 935 436</p>					 
 				
 											<script type="text/javascript">
@@ -195,21 +195,22 @@
 					<p><a href="mailto:Kontakt@byggmont.se">Kontakt@byggmont.se</a>
                     </p>
 				</div>
-				<!--
+				<div class="col-lg-2 col-xl-3 mx-auto mb-md-0 mb-4">
+						<h6 class="text-uppercase font-weight-bold">ADRESS</h6>
+						<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 5em;">
+						<p>Byggatan 1</p>                    
+						<p>58251 Motala</p>
+					</div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase font-weight-bold">SOCIALA MEDIER</h6>
-					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 5em;">
+                    <h6 class="text-uppercase font-weight-bold">Samarbetspartners</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 5em;"><br>
+					<img src="makita.svg" height="30rem">
+					<!--
 					<p><a href="https://facebook.com/byggmont">Facebook</a>
                     </p>
                     <p><a href="https://instagram.com/byggmont">Instagram</a>
-                    </p>                    
-                </div>-->
-                <div class="col-lg-2 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <h6 class="text-uppercase font-weight-bold">ADRESS</h6>
-                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 5em;">
-                    <p>Byggatan 1</p>                    
-                    <p>58251 Motala</p>
-                </div>
+                    </p>-->        
+                </div>               
             </div>
         </div>
     </footer>
