--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script>
         window.fbAsyncInit = function() {
             FB.init({
+                appId            : '938134089903291',
+                autoLogAppEvents : true,
                 xfbml: true,
                 version: 'v5.0'
             });
