--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }(document, 'script', 'facebook-jssdk'));
     </script>
     <!-- Customer chat code -->
-    <div class="fb-customerchat" attribution=setup_tool page_id="102912337851969" theme_color="#118f69" logged_in_greeting="Hej! Hur kan vi hjälpa dig idag?" logged_out_greeting="Hej! Hur kan vi hjälpa dig idag?"></div>
+    <div class="fb-customerchat" attribution=setup_tool page_id="102912337851969" theme_color="#118f69" logged_in_greeting="Hej! Hur kan vi hjälpa dig idag?" logged_out_greeting="Hej! Om du loggar in med Facebook kan du skriva direkt till oss!"></div>
 
     <script>
         document.body.className += ' fade-out';
